Updates, cleanup, doc fixing.